--- a/public/assets/sass/layout/_header.sass
+++ b/public/assets/sass/layout/_header.sass
@@ -21,7 +21,7 @@
 		position: absolute
 
 		&.left, &.top, &.right, &.bottom 
-			box-shadow: inset 0 0 0 0.5px #fff
+			box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .4)
 
 		&.left
 			width: 5px
